# ReflexEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Doxyfile  LICENSE.md  README.md
cmake/: CMakeLists.txt
cmake/glad/: CMakeLists.txt
cmake/glad/src/: glad.c
cmake/glfw/: CMakeLists.txt  CONTRIBUTORS.md  README.md
cmake/glfw/CMake/: GenerateMappings.cmake
cmake/glfw/docs/: Doxyfile.in  compile.dox  context.dox  input.dox  intro.dox  window.dox
cmake/glfw/examples/: CMakeLists.txt  heightmap.c
cmake/glfw/src/: CMakeLists.txt  cocoa_joystick.h  cocoa_monitor.m  cocoa_platform.h  cocoa_window.m  context.c  egl_context.c  egl_context.h  glx_context.c  glx_context.h  init.c  input.c  internal.h  linux_joystick.h  mappings.h  mappings.h.in  monitor.c  nsgl_context.h  nsgl_context.m  osmesa_context.c  osmesa_context.h  posix_thread.h  posix_time.h  wgl_context.c  wgl_context.h  win32_init.c  win32_joystick.h  win32_platform.h  win32_time.c  win32_window.c  window.c  wl_init.c  wl_monitor.c  wl_platform.h  wl_window.c  x11_platform.h  x11_window.c
cmake/glfw/tests/: CMakeLists.txt
cmake/imgui/: CMakeLists.txt
cmake/lua/: CMakeLists.txt
cmake/raknet/: CMakeLists.txt  RakString.cpp  RakString.h  raknet.lib
cmake/raknet/Lib/: DLL_vc9_DLL_Release_x64.lib
src/: AStar.cpp  AStar.h  AStarInterface.cpp  AStarInterface.h  BTT.cpp  BTT.hpp  BruteForceTerrain.cpp  BruteForceTerrain.hpp  BttController.cpp  BttController.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  CommonValues.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Doxyfile  Engine.cpp  Engine.hpp  GameAssetFactory.cpp  GameAssetFactory.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  Model.cpp  Model.hpp  NetworkManager.cpp  NetworkManager.hpp  OmniShadowMap.cpp  OmniShadowMap.hpp  PointLight.cpp  PointLight.hpp  ReflexAssertion.hpp  ReflexEngine.hpp  Shader.cpp  (+23 more)
src/AI/: Counter.hpp  EngineTime.cpp  EngineTime.hpp  NPC.cpp  NPC.hpp  dynamicEnum.h  entityManager.cpp  entityManager.h  luaAccessScriptedFSM.cpp  luaAccessScriptedFSM.hpp  messageDispatcher.cpp  messageDispatcher.h  movement.cpp  movement.h  playerStates.cpp  playerStates.h  singleton.h  singletons.h  state.h  stateMachine.h  telegram.h  vector2D.hpp  world.cpp  world.hpp
src/Controller/: Body.hpp  BodyRigid.cpp  BodyRigid.hpp  BodyRigidPhysics.cpp  BodyRigidPhysics.hpp  ECSGameAssetFactory.cpp  ECSGameAssetFactory.hpp  GameAssetFactory.cpp  GameAssetFactory.hpp  GenericFunctions.cpp  GenericFunctions.h  GuiLuaAccess.cpp  GuiLuaAccess.hpp  LuaManager.cpp  LuaManager.hpp  MaterialLuaController.cpp  MaterialLuaController.hpp  MathAccess.cpp  MathAccess.hpp  NetworkAccess.cpp  NetworkAccess.h  Physics.cpp  Physics.hpp  TextureManager.cpp  TextureManager.hpp  multiTextureCreator.cpp  multiTextureCreator.hpp
src/Controller/AI/: AgentHelper.cpp  AgentHelper.hpp  Counter.cpp  entityManager.cpp  entityManager.h  luaAccessScriptedFSM.cpp  messageDispatcher.cpp  messageDispatcher.h  stateMachine.h  statemachineComponentHelper.cpp  statemachineComponentHelper.hpp  telegram.h  vector2D.cpp
src/Controller/Affordance/: Affordance.cpp  Affordance.hpp  AffordanceHelper.cpp  AffordanceHelper.hpp  AffordanceSystem.cpp  AffordanceSystem.hpp  AffordanceUtility.hpp
src/Controller/Audio/: Audio.cpp  Audio.hpp  AudioStopReceiver.cpp  AudioStopReceiver.hpp
src/Controller/ECS/: ECS.cpp  ECS.hpp  ECSAccess.cpp  ECSAccess.hpp  Entity.cpp  Entity.hpp  EntitySerializer.cpp  EntitySerializer.hpp  System.cpp  System.hpp
src/Controller/Emotion/: Emotion.cpp  Emotion.hpp  EmotionHelper.cpp  EmotionHelper.hpp
src/Controller/GUI/: CollectionsGUI.cpp  CollectionsGUI.hpp  DebugGUI.cpp  DebugGUI.hpp  DebugLogger.cpp  DebugLogger.hpp  ECSGui.cpp  ECSGui.hpp  PerformanceLoggerGUI.cpp  PerformanceLoggerGUI.hpp
src/Controller/Input/: Input.hpp  InputManager.cpp  InputManager.hpp  InputState.cpp  InputState.hpp
src/Controller/Networking/: NetworkAccess.h
src/Controller/Pathfinding/: AStar.cpp  AStar.h  AStarInterface.cpp  AStarInterface.h  movement.h  world.cpp  world.hpp
src/Controller/Physics/: BodyRigidPhysics.cpp  BodyRigidPhysics.hpp  ColliderRenderer.cpp  ColliderRenderer.hpp  CollisionEvent.cpp  CollisionEvent.hpp  EngineResolve.cpp  EngineResolve.hpp  (+20 more)
src/Game/: ECSScene.cpp  ECSScene.hpp  Scene.hpp  TestScene.cpp  TestScene.hpp
src/GameObject/: GameObject.hpp  Item.cpp  Item.hpp  Water.cpp  Water.h
src/Model/: LightData.hpp  ModelData.cpp  ModelData.hpp  singleton.h  singletons.h
src/Pattern/: Composite.cpp  Composite.hpp
src/PhysicsTemp/: physicsEntityManager.cpp  physicsEntityManager.h
src/ReflexEngine/: ReflexEngine.cpp  ReflexEngine.hpp
src/Renderer/: Renderer.hpp
src/Scene/: ECSScene.cpp  ECSScene.hpp  Scene.hpp  TestScene.cpp  TestScene.hpp
src/View/: guiManager.cpp  guiManager.hpp
src/html/: _a_star_8cpp.html  _a_star_8cpp.js  _a_star_8cpp__incl.map  _a_star_8cpp__incl.md5  _a_star_8cpp_source.html  _a_star_8h.html  _a_star_8h.js  _a_star_8h__dep__incl.map  _a_star_8h__dep__incl.md5  _a_star_8h__incl.map  _a_star_8h__incl.md5  _a_star_8h_source.html  _a_star_interface_8cpp.html  _a_star_interface_8cpp__incl.map  _a_star_interface_8cpp__incl.md5  _a_star_interface_8cpp_source.html  _a_star_interface_8h.html  _a_star_interface_8h__dep__incl.map  _a_star_interface_8h__dep__incl.md5  _a_star_interface_8h__incl.map  _a_star_interface_8h__incl.md5  _a_star_interface_8h_source.html  _body_8cpp.html  _body_8cpp__incl.map  _body_8cpp__incl.md5  _body_8cpp_source.html  _body_8hpp.html  _body_8hpp__dep__incl.map  _body_8hpp__dep__incl.md5  _body_8hpp__incl.map  _body_8hpp__incl.md5  _body_8hpp_source.html  _body_rigid_8cpp.html  _body_rigid_8cpp__incl.map  _body_rigid_8cpp__incl.md5  _body_rigid_8cpp_source.html  _body_rigid_8hpp.html  _body_rigid_8hpp__dep__incl.map  _body_rigid_8hpp__dep__incl.md5  _body_rigid_8hpp__incl.map  (+956 more)
src/shaders/: directional_shadow_map.vert  omni_shadow_map.frag  omni_shadow_map.geom  shader.frag  shader.vert  skybox.vert
(+3193 files in other folders)
