add_library(ReflexEngineSrc
	NetworkManager.cpp

	Model/Components/RigidBody.cpp
	Model/RunTimeDataStorage/DynamicDataStorage.cpp
	Model/RunTimeDataStorage/GlobalDataStorage.cpp
	Model/LightData.hpp
	Model/ModelData.cpp

	View/Renderer/OpenGL/OpenGL.cpp
	View/Renderer/OpenGL/Objects/Light.cpp
	View/Renderer/OpenGL/Objects/DirectionalLight.cpp
	View/Renderer/OpenGL/Objects/PointLight.cpp
	View/Renderer/OpenGL/Objects/SpotLight.cpp
	View/Renderer/OpenGL/Objects/Material.cpp
	View/Renderer/OpenGL/Objects/Mesh.cpp
	View/Renderer/OpenGL/Objects/Model.cpp
	View/Renderer/OpenGL/Objects/Shader.cpp
	View/Renderer/OpenGL/Objects/ShadowMap.cpp
	View/Renderer/OpenGL/Objects/OmniShadowMap.cpp
	View/Renderer/OpenGL/Objects/Skybox.cpp
	View/Renderer/OpenGL/Objects/Texture.cpp
	View/Renderer/OpenGL/Objects/Md2Model.cpp
	View/Renderer/OpenGL/Objects/ReactMesh.cpp
	View/guiManager.cpp

	Controller/ReflexEngine/ReflexEngine.cpp
	Controller/ReflexEngine/EngineTime.cpp
	Controller/ReflexEngine/Window.cpp
	Controller/ReflexEngine/Camera.cpp
	Controller/ReflexEngine/SceneManager.cpp
	Controller/Affordance/AffordanceHelper.cpp
	Controller/Affordance/Affordance.cpp
	Controller/Affordance/AffordanceSystem.cpp
	Controller/ECS/ECS.cpp
	Controller/ECS/Entity.cpp
	Controller/ECS/ECSAccess.cpp
	Controller/ECS/System.cpp
	Controller/ECS/EntitySerializer.cpp
	Controller/ResourceManager/ResourceManager.cpp
	Controller/ResourceManager/TextureManager.cpp
	Controller/ResourceManager/ModelManager.cpp
	Controller/ResourceManager/Md2ModelManager.cpp
	Controller/ResourceManager/MaterialManager.cpp
	Controller/ResourceManager/LightManager.cpp
	Controller/ResourceManager/SkyboxManager.cpp
	Controller/ResourceManager/MeshManager.cpp
	Controller/ResourceManager/TerrainManager.cpp
	Controller/ResourceManager/ObjectSaving.cpp
	Controller/ResourceManager/RigidbodyManager.cpp
	Controller/Input/InputManager.cpp
	Controller/Input/InputState.cpp
	Controller/Audio/Audio.cpp
	Controller/Audio/AudioStopReceiver.cpp
	Controller/Pathfinding/AStar.cpp
	Controller/Pathfinding/AStarInterface.cpp
	Controller/Terrain/Terrain.cpp
	Controller/Terrain/BTT.cpp
	Controller/Terrain/BttController.cpp
	Controller/Terrain/TexturedTerrain.cpp
	Controller/ECSGameAssetFactory.cpp
	Controller/LuaManager.cpp
	Controller/MathAccess.cpp
	Controller/Physics/Physics.cpp
	Controller/Physics/EngineResolve.cpp
	Controller/Physics/ReactResolve.cpp
	Controller/Physics/PhysicBody.cpp
	Controller/Physics/CollisionEvent.cpp
	Controller/Physics/ColliderRenderer.cpp
	Controller/Physics/LoadOBJColliderData.cpp
	Controller/Physics/QuaternionHelper.cpp
	Controller/Physics/ResolutionOutput.cpp
	Controller/Networking/NetworkAccess.cpp
	Controller/Terrain/multiTextureCreator.cpp
	Controller/RandomGenerators/PseudoRandomNumberGenerator.cpp
	Controller/Terrain/TerrainManager.cpp
	Controller/Pathfinding/movement.cpp
	Controller/Pathfinding/world.cpp
	Controller/AI/Counter.cpp
	Controller/AI/vector2D.cpp
	Controller/AI/statemachineComponentHelper.cpp
	Controller/GUI/ECSGui.cpp
	Controller/GUI/DebugLogger.cpp
	Controller/GUI/DebugGUI.cpp
	Controller/ReflexEngine/PerformanceLogger.cpp
	Controller/GUI/PerformanceLoggerGUI.cpp
	Controller/GUI/CollectionsGUI.cpp

	Scene/Scene.hpp
	Scene/ECSScene.cpp
)

target_include_directories(ReflexEngineSrc PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
